组件引入之前

--- a/src/assets/stylus/border.styl
+++ b/src/assets/stylus/border.styl
@@ -2,6 +2,7 @@ border1px(width = 1px,color = #ccc,style = solid,radius = 0)
   position relative
   &::after
     position absolute
+    pointer-events none//边框遮盖问题
     left 0
     right 0
     bottom 0
