--- a/src/assets/stylus/icon.styl
+++ b/src/assets/stylus/icon.styl
@@ -4,6 +4,23 @@
   src url('~@/assets/icons/iconfont.woff') format('woff'),
   url('~@/assets/icons/iconfont.ttf') format('truetype');
 
+//@font-face
+//  font-family 'iconfont'
+//  src url('~@/assets/icons/iconfont.ttf') format('truetype')，
+//      url('~@/assets/icons/iconfont.woff') format('woff')
+
+.iconfont
+  font-family 'iconfont'
+
+.iconfont-movie::before
+  content: '\e7d3'
+
+.iconfont-theater::before
+  content: '\e8c0'
+
+.iconfont-profile::before
+  content: '\e60e'
+
 .movie-ico
   font-family iconfont
   font-style normal
