--- a/src/assets/stylus/icon.styl
+++ b/src/assets/stylus/icon.styl
@@ -23,6 +23,7 @@
 
 .movie-ico
   font-family iconfont
+  font-size 16px
   font-style normal
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
